--- a/javascript/web_site02.html
+++ b/javascript/web_site02.html
@@ -222,7 +222,10 @@
 
                 <hr>
 
-                
+                <h2 class="t_tit2">결과</h2>
+                <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
+                    <iframe src="https://kimsangjunv1.github.io/coding/site/cardType/cardType02.html" frameborder="0"></iframe>
+                </div>
 
             </div>
             
