--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -139,7 +139,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg01.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -158,7 +158,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg02.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -177,7 +177,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg03.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -196,7 +196,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg04.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -217,7 +217,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg05.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -231,7 +231,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg06.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -245,7 +245,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg07.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
@@ -259,7 +259,7 @@
             <article class="card">
                 <figure class="card__header">
                     <!--img를 쓰기 위한 웹 표준 방법-->
-                    <img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응">
+                    <img src="img/card02_bg08.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
                 <div class="card__body">
                     <div class="card_body_title_container">
