--- a/javascript/web_site02.html
+++ b/javascript/web_site02.html
@@ -80,15 +80,10 @@
         <main id="main">
             <div class="document">
                 <!-- 01번 메인 샘플 시작 -->
-                <h2 class="t_tit">웹 표준을 위한 가이드라인</h2>
-                <h2 class="t_tit2">W3C 웹표준</h2>
-                <p class="t_desc2_html">
-                    W3C의 설립 취지는 웹의 지속적인 성장을 도모하는 프로토콜과 가이드라인을 개발하여 월드 와이드 웹의 모든 잠재력을 이끌어 내는 것이며, 설립 목적인 웹 표준과
-                    가이드라인 개발을 수행하고 지금까지의 결과로 <i>지난 10년간 80여개의 W3C 권고안을 발표</i>하였습니다.<br>
-                    그 덕에 많은 브라우저들이 탄생했음에도 W3C의 활동으로 인해 규칙이 정해져 통일된 웹 브라우저 환경이 조성되었습니다.
-                </p>
                 <h2 class="t_tit2">Figma</h2>
-                <h2 class="t_box">1</h2>
+                <p class="t_desc2_css">
+                    피그마를 이용해 그리드를 생성 후 각 규격에 맞게 요소들을 구성합니다.
+                </p>
                 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fa9buUse4J646SWPSoOw7ng%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D334%253A3" allowfullscreen></iframe>
                 <hr>
 
@@ -107,40 +102,142 @@
                                     <div class="t_code">
 <pre><code class="language-html">&lt;section id="cardType" class="card__wrap nexon section"&gt;
     &lt;!--다중 클래스 선택--&gt;
-    &lt;h2&gt;PS5 Controller User Guide 🎮&lt;/h2&gt;
-    &lt;p&gt;새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험1을 만끽하세요&lt;/p&gt;
+    &lt;h2&gt;각종 병 예방수칙&lt;/h2&gt;
+    &lt;p&gt;다양한 병을 예방하기 위해서는 무엇보다 다음과 같은 수칙들이 꼭 필요합니다&lt;br&gt;
+        꼭 병에 걸리지 않도록 준수해주세요 🦠&lt;/p&gt;
     &lt;div class="card__inner container"&gt;
         &lt;article class="card"&gt;
             &lt;figure class="card__header"&gt;
                 &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응"&gt;
+                &lt;img src="img/card02_bg01.jpg" alt="다양한 인터렉티브 반응"&gt;
             &lt;/figure&gt;
             &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;다양한 인터렉티브 반응&lt;/h3&gt;
-                &lt;p class="desc"&gt;인게임 기어 및 환경과 상호작용하면서 활시위를 당길 때 점점 팽팽해지는 느낌과 질주하는 자동차의 급브레이크를 밟는 느낌 등 액션과 함께 어우러집니다.&lt;/p&gt;
-                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;권장된 모든 백신 맞기&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;
+                        &lt;svg width="14" height="16" viewBox="0 0 14 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg"&gt;
+                            &lt;path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" /&gt;
+                        &lt;/svg&gt;
+                    &lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;사회에서 권장되는 모든 백신을 맞으세요, 권장되지 않은 백신 접종시 어떠한 부작용이 일어날지 모릅니다.
+                &lt;/p&gt;
             &lt;/div&gt;
         &lt;/article&gt;
         &lt;article class="card"&gt;
-            &lt;figure&gt;
+            &lt;figure class="card__header"&gt;
                 &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg02.jpg" alt="게임패드 지원"&gt;
+                &lt;img src="img/card02_bg02.jpg" alt="다양한 인터렉티브 반응"&gt;
             &lt;/figure&gt;
             &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;게임패드 지원&lt;/h3&gt;
-                &lt;p class="desc"&gt;내장 마이크를 사용하거나 3.5mm 잭에 미니멀하고 아이코닉한 헤드셋을 연결 전용 음소거 버튼을 사용하여 음성 캡처를 즉시 끌 수 있습니다.&lt;/p&gt;
-                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;마스크 착용&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;
+                        &lt;svg width="14" height="16" viewBox="0 0 14 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg"&gt;
+                            &lt;path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" /&gt;
+                        &lt;/svg&gt;
+                    &lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;마스크는 꼭 상시로 착용해야하며 공공장소 실내에서 잘 맞는 마스크를 올바르게 착용해야 합니다.
+                &lt;/p&gt;
             &lt;/div&gt;
         &lt;/article&gt;
         &lt;article class="card"&gt;
-            &lt;figure&gt;
+            &lt;figure class="card__header"&gt;
                 &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg03.jpg" alt="진동을 통한 생생한 현장감"&gt;
+                &lt;img src="img/card02_bg03.jpg" alt="다양한 인터렉티브 반응"&gt;
             &lt;/figure&gt;
             &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;진동을 통한 생생한 현장감&lt;/h3&gt;
-                &lt;p class="desc"&gt;기존의 진동 모터 대신 듀얼 액추에이터가 선사하는 물리적 반응형 피드백을 경험해보세요, 게임 내 환경에서부터 실감 나는 역동적인 진동이 손을 타고 전해집니다.&lt;/p&gt;
-                &lt;a class="btn" href="/"&gt;더 자세히 보기&lt;/a&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;다른 사람과 거리두기&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;
+                        &lt;svg width="14" height="16" viewBox="0 0 14 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg"&gt;
+                            &lt;path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" /&gt;
+                        &lt;/svg&gt;
+                    &lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
+                &lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card02_bg04.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;환기가 원활한 곳 찾기&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;
+                        &lt;svg width="14" height="16" viewBox="0 0 14 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg"&gt;
+                            &lt;path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" /&gt;
+                        &lt;/svg&gt;
+                    &lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;사람이 많이 붐비는 장소와 실외로부터 신선한 공기가 유입되지 않는 실내 장소를 피하세요.
+                &lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+    &lt;/div&gt;
+    &lt;div class="card__inner2 container"&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card02_bg05.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;전파 방지를 위한 검사&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;⇢&lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
+                &lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card02_bg06.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;손씻을땐 3분씩!&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;⇢&lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
+                &lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card02_bg07.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;손씻을땐 3분씩!&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;⇢&lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
+                &lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card02_bg08.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;div class="card_body_title_container"&gt;
+                    &lt;h3 class="tit"&gt;손씻을땐 3분씩!&lt;/h3&gt;
+                    &lt;a class="btn" href="/"&gt;⇢&lt;/a&gt;
+                &lt;/div&gt;
+                &lt;p class="desc"&gt;미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
+                &lt;/p&gt;
             &lt;/div&gt;
         &lt;/article&gt;
     &lt;/div&gt;
@@ -170,46 +267,124 @@
                             <div class="sample03_result">
                                 <div class="script">
                                     <div class="t_code">
-<pre><code class="language-html">&lt;section id="cardType" class="card__wrap nexon section"&gt;
-    &lt;!--다중 클래스 선택--&gt;
-    &lt;h2&gt;PS5 Controller User Guide 🎮&lt;/h2&gt;
-    &lt;p&gt;새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험1을 만끽하세요&lt;/p&gt;
-    &lt;div class="card__inner container"&gt;
-        &lt;article class="card"&gt;
-            &lt;figure class="card__header"&gt;
-                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응"&gt;
-            &lt;/figure&gt;
-            &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;다양한 인터렉티브 반응&lt;/h3&gt;
-                &lt;p class="desc"&gt;인게임 기어 및 환경과 상호작용하면서 활시위를 당길 때 점점 팽팽해지는 느낌과 질주하는 자동차의 급브레이크를 밟는 느낌 등 액션과 함께 어우러집니다.&lt;/p&gt;
-                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
-            &lt;/div&gt;
-        &lt;/article&gt;
-        &lt;article class="card"&gt;
-            &lt;figure&gt;
-                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg02.jpg" alt="게임패드 지원"&gt;
-            &lt;/figure&gt;
-            &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;게임패드 지원&lt;/h3&gt;
-                &lt;p class="desc"&gt;내장 마이크를 사용하거나 3.5mm 잭에 미니멀하고 아이코닉한 헤드셋을 연결 전용 음소거 버튼을 사용하여 음성 캡처를 즉시 끌 수 있습니다.&lt;/p&gt;
-                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
-            &lt;/div&gt;
-        &lt;/article&gt;
-        &lt;article class="card"&gt;
-            &lt;figure&gt;
-                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
-                &lt;img src="img/card_bg03.jpg" alt="진동을 통한 생생한 현장감"&gt;
-            &lt;/figure&gt;
-            &lt;div class="card__body"&gt;
-                &lt;h3 class="tit"&gt;진동을 통한 생생한 현장감&lt;/h3&gt;
-                &lt;p class="desc"&gt;기존의 진동 모터 대신 듀얼 액추에이터가 선사하는 물리적 반응형 피드백을 경험해보세요, 게임 내 환경에서부터 실감 나는 역동적인 진동이 손을 타고 전해집니다.&lt;/p&gt;
-                &lt;a class="btn" href="/"&gt;더 자세히 보기&lt;/a&gt;
-            &lt;/div&gt;
-        &lt;/article&gt;
-    &lt;/div&gt;
-&lt;/section&gt;
+<pre><code class="language-css">@import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
+
+    .nexon {
+        font-family: 'GmarketSans';
+        font-weight: 400;
+    }
+
+    /* Reset */
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    a {
+        text-decoration: none;
+        color: #fff;
+        background-color: #3E45FF;
+        border-radius: 5px;
+        width: 28px;
+        height: 28px;
+        text-align: center;
+        font-size: 25px;
+    }
+
+    img {
+        width: 100%;
+        border-radius: 10px;
+        margin-bottom: 20px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-weight: normal;
+    }
+
+    /* common(공통) */
+    .container {
+        width: 1160px;
+        padding: 0 20px;
+        margin: 0 auto;
+    }
+
+    .section {
+        padding: 120px 0;
+        /*위 아래 */
+    }
+
+    .section>h2 {
+        /* ">" 이걸로 section 안에 있는 h2선택 */
+        font-size: 50px;
+        line-height: 1;
+        /* 1이라고 적으면 auto랑 똑같음 */
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .section>p {
+        font-size: 22px;
+        font-weight: 300;
+        color: #666;
+        text-align: center;
+        margin-bottom: 70px;
+    }
+
+    /* cardType */
+    .card__inner {
+        display: flex;
+        /* 생성한 요소들을 flex로 정렬합니다. */
+        justify-content: space-between;
+        /*창 크기에 맞게 좌우로 정렬합니다 */
+        /*콘텐츠를 양쪽으로 정렬*/
+        margin-bottom: 50px;
+    }
+
+    .card__inner2 {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .card {
+        width: 24%;
+        background-color: #ffffff;
+    }
+
+    .card__body {
+        /* padding: 24px; */
+    }
+
+    .card_body_title_container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .card__body .tit {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .card__body .desc {
+        font-size: 18px;
+        line-height: 1.4;
+        color: #666;
+        margin-bottom: 20px;
+        font-weight: 300;
+    }
+
+    .card__body .btn {}
+
+    .btn_box {
+        padding: 2px;
+        background-color: #3E45FF;
+        color: #fff;
+        border-radius: 5px;
+       
 </code></pre>
                                     </div>
                                 </div>
