--- a/javascript/web_site.html
+++ b/javascript/web_site.html
@@ -245,6 +245,15 @@ h6 {
                 <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
                     <iframe src="https://kimsangjunv1.github.io/coding/site/cardType/cardType01.html" frameborder="0"></iframe>
                 </div>
+                <hr>
+                <div style="display:flex; justify-content:space-between; margin-left:20%; margin-right:20%;">
+                    <div class="t_link">
+                        <a href="https://github.com/kimsangjunv1/coding/blob/main/site/cardType/cardType01.html" target="blank">원본 소스 보기</a>
+                    </div>
+                    <div class="t_link">
+                        <a href="https://kimsangjunv1.github.io/coding/site/cardType/cardType01.html" target="blank">원본 페이지 보기</a>
+                    </div>
+                </div>
                 <!-- 01번 메인 샘플 끝 -->
             </div>
             
