--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카드 유형01</title>
+    <title>카드 유형02</title>
     <style>
         @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
 
@@ -145,8 +145,7 @@
                     <div class="card_body_title_container">
                         <h3 class="tit">권장된 모든 백신 맞기</h3>
                         <a class="btn" href="/">
-                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
                             </svg>
                         </a>
@@ -156,7 +155,7 @@
                 </div>
             </article>
             <article class="card">
-                <figure class="card__header">
+                <figure class="card__header" >
                     <!--img를 쓰기 위한 웹 표준 방법-->
                     <img src="img/card02_bg02.jpg" alt="다양한 인터렉티브 반응">
                 </figure>
@@ -164,8 +163,7 @@
                     <div class="card_body_title_container">
                         <h3 class="tit">마스크 착용</h3>
                         <a class="btn" href="/">
-                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
                             </svg>
                         </a>
@@ -183,8 +181,7 @@
                     <div class="card_body_title_container">
                         <h3 class="tit">다른 사람과 거리두기</h3>
                         <a class="btn" href="/">
-                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
                             </svg>
                         </a>
@@ -202,8 +199,7 @@
                     <div class="card_body_title_container">
                         <h3 class="tit">환기가 원활한 곳 찾기</h3>
                         <a class="btn" href="/">
-                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
                             </svg>
                         </a>
@@ -222,7 +218,11 @@
                 <div class="card__body">
                     <div class="card_body_title_container">
                         <h3 class="tit">전파 방지를 위한 검사</h3>
-                        <a class="btn" href="/">⇢</a>
+                        <a class="btn" href="/">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
+                            </svg>
+                        </a>
                     </div>
                     <p class="desc">미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
                     </p>
@@ -236,7 +236,11 @@
                 <div class="card__body">
                     <div class="card_body_title_container">
                         <h3 class="tit">손씻을땐 3분씩!</h3>
-                        <a class="btn" href="/">⇢</a>
+                        <a class="btn" href="/">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
+                            </svg>
+                        </a>
                     </div>
                     <p class="desc">미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
                     </p>
@@ -250,7 +254,11 @@
                 <div class="card__body">
                     <div class="card_body_title_container">
                         <h3 class="tit">손씻을땐 3분씩!</h3>
-                        <a class="btn" href="/">⇢</a>
+                        <a class="btn" href="/">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
+                            </svg>
+                        </a>
                     </div>
                     <p class="desc">미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
                     </p>
@@ -264,7 +272,11 @@
                 <div class="card__body">
                     <div class="card_body_title_container">
                         <h3 class="tit">손씻을땐 3분씩!</h3>
-                        <a class="btn" href="/">⇢</a>
+                        <a class="btn" href="/">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                <path d="M1 7C0.447715 7 3.71402e-08 7.44772 0 8C-3.71402e-08 8.55228 0.447715 9 1 9L1 7ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928933C6.95262 0.538408 6.31946 0.538408 5.92893 0.928933C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM1 9L13 9L13 7L1 7L1 9Z" fill="white" />
+                            </svg>
+                        </a>
                     </div>
                     <p class="desc">미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 올바른 손...
                     </p>
